Nitea 0.3.0: NeoForge, Forge and Fabric from one repository
Ship one artifact per loader and Minecraft version, all built from the
same code: cc.nitea:nitea-<loader>-<minecraft>.

- NeoForge: 1.20.1, 1.21.1, 1.21.11, 26.1, 26.2
- Forge: 1.21.1, 1.21.11, 26.1, 26.2 (new)
- Fabric: 1.21.1, 1.21.11, 26.1, 26.2 (new, no Fabric API needed)

Layout:
- core/: the loader-independent library (Java 8, no dependencies)
- versions/<mc>/common/: consent screen and title screen button, shared
  by every loader for that Minecraft version
- versions/<mc>/<loader>/: one Gradle build per artifact, hooking the
  screens to NeoForge/Forge screen events or to two Fabric client mixins

On Forge, Nitea is a game library like on NeoForge; on Fabric it is a
library mod (id "nitea") without an entry point. Every loader keeps one
copy, the newest, however many mods bundle it.

Core changes:
- Detect the loader through Forge's static ModList API on 26.x
- Accept "-" in mod IDs, as Fabric does

Build and release:
- Gradle 9.5.1; parallel builds off so Forge setups
- Forge is compileOnly, so it stays out of the published POM
- Publish workflow: pushing a version tag builds, tests and publishes
  every artifact to the Maven repository on GitHub
  (https://pyrogenous.github.io/NSDK)
- JitPack still works as com.github.pyrogenous.NSDK:<artifact>:<tag>