@@ -6,7 +6,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -20,7 +22,35 @@ public final class CrashReports {
     private static final int MAX_PER_LAUNCH = 5;
 
     /** A crash report that concerns the mod. */
-    public record Found(String fileName, Instant time, String description, String text) {}
+    public static final class Found {
+        private final String fileName;
+        private final Instant time;
+        private final String description;
+        private final String text;
+
+        Found(String fileName, Instant time, String description, String text) {
+            this.fileName = fileName;
+            this.time = time;
+            this.description = description;
+            this.text = text;
+        }
+
+        public String fileName() {
+            return fileName;
+        }
+
+        public Instant time() {
+            return time;
+        }
+
+        public String description() {
+            return description;
+        }
+
+        public String text() {
+            return text;
+        }
+    }
 
     private CrashReports() {}
 
@@ -29,12 +59,12 @@ public final class CrashReports {
         String last = settings.state(modId, STATE_KEY);
         settings.saveState(modId, STATE_KEY, Long.toString(now));
         // First launch with Nitea: older reports predate the mod's reporting, skip them
-        if (last == null) return List.of();
+        if (last == null) return Collections.emptyList();
         // Nor anything from before the player opted in
         long since = Math.max(parseLong(last), Engine.consentChangedAt());
 
         Path dir = gameDir.resolve("crash-reports");
-        if (!Files.isDirectory(dir)) return List.of();
+        if (!Files.isDirectory(dir)) return Collections.emptyList();
         List<Found> found = new ArrayList<>();
         try (Stream<Path> files = Files.list(dir)) {
             List<Path> recent = files
@@ -42,9 +72,9 @@ public final class CrashReports {
                     .filter(p -> modified(p) > since)
                     .sorted((a, b) -> Long.compare(modified(b), modified(a)))
                     .limit(MAX_PER_LAUNCH)
-                    .toList();
+                    .collect(Collectors.toList());
             for (Path file : recent) {
-                String text = Files.readString(file, StandardCharsets.UTF_8).replace("\r\n", "\n");
+                String text = new String(Files.readAllBytes(file), StandardCharsets.UTF_8).replace("\r\n", "\n");
                 String trace = trace(text);
                 if (!modId.equals(Engine.culprit(trace))) continue;
                 found.add(new Found(file.getFileName().toString(), Instant.ofEpochMilli(modified(file)), description(text), trace));
